cmake_minimum_required(VERSION 3.0.0)
project(OpenEESLISM VERSION 0.1.0)

add_executable(eeslism 
    Source/CAT.c
    Source/CINC.c
    Source/COORDNT.c
    Source/DAINYUU.c
    Source/DATAIN.c
    Source/EOP.c
    Source/ERRPRINT.c
    Source/GDATA.c
    Source/GRPOINT.c
    Source/HOUSEN.c
    Source/INOROUT.c
    Source/KAUNT.c
    Source/KOUTEN.c
    Source/LPOP_placement.c
    Source/MAT_INIT.c
    Source/MONTE_CARLO.c
    Source/NENNKANN.c
    Source/OPIhor.c
    Source/PRA.c
    Source/RAND.c
    Source/SHADOW.c
    Source/STRCUT.c
    Source/URA.c
    Source/YOGEN.c
    Source/ZAHYOU.c
    Source/ZPRINT.c
    Source/bdhpri.c
    Source/blhcflib.c
    Source/blhelm.c
    Source/blhelmlib.c
    Source/blinit.c
    Source/blpanel.c
    Source/blpcm.c
    Source/blpvsystem.c
    Source/blrmaceqcf.c
    Source/blrmdata.c
    Source/blrmprint.c
    Source/blrmqprt.c
    Source/blrmresid.c
    Source/blrmschd.c
    Source/blrmvent.c
    Source/blroom.c
    Source/blroomcf.c
    Source/blroomday.c
    Source/blroomene.c
    Source/blroomvar.c
    Source/blroomvptr.c
    Source/blrzone.c
    Source/blsnbklib.c
    Source/blsolarwall.c
    Source/blsrprint.c
    Source/bltcomfrt.c
    Source/blwall.c
    Source/dbgpri1.c
    Source/dbgpri2.c
    Source/dbgprip1.c
    Source/e79.c
    Source/eebslib.c
    Source/eecmpdat_s.c
    Source/eecmpday_s.c
    Source/eecmpprt_s.c
    Source/eecpprint.c
    Source/eedayslib.c
    Source/eefiles.c
    Source/eegndata.c
    Source/eeinput_s.c
    Source/eenvptr.c
    Source/eepathdat.c
    Source/eepathlib_s.c
    Source/eepflow.c
    Source/eeprint_s.c
    Source/eepthene.c
    Source/eepthprt.c
    Source/eerthlib.c
    Source/eespre.c
    Source/eesyselmalc_s.c
    Source/eesyseqv.c
    Source/eesysupv_s.c
    Source/eesysvar.c
    Source/eettlprt.c
    Source/eevcdat.c
    Source/epsinput.c
    Source/eschdata.c
    Source/eschdlr_s.c
    Source/eschval.c
    Source/escntldat.c
    Source/escntllb_s.c
    Source/escntlsch_s.c
    Source/escntrlfactor.c
    Source/esidcode_s.c
    Source/evcwdfl.c
    Source/mcaclib.c
    Source/mcboiler.c
    Source/mccnvrg.c
    Source/mcdesiccant.c
    Source/mceqcadat.c
    Source/mceqpcat.c
    Source/mcevcooling.c
    Source/mchccoil.c
    Source/mchcload.c
    Source/mchexchgr.c
    Source/mcmecsys.c
    Source/mcomvav.c
    Source/mcpipe.c
    Source/mcpump.c
    Source/mcpv.c
    Source/mcqmeas.c
    Source/mcrefas.c
    Source/mcreflib.c
    Source/mcsolrcol.c
    Source/mcstank.c
    Source/mcstanklb.c
    Source/mcstheat.c
    Source/mcthex.c
    Source/mcvalv.c
    Source/mcvav.c
    Source/mcxprmcs.c
    Source/memoryfree.c
    Source/spline.c
    Source/u_ees3lb.c
    Source/u_inv.c
    Source/u_minmax.c
    Source/u_mlib.c
    Source/u_psy.c
    Source/u_sun.c
    Source/valinit.c
    Source/waterandair.c
    Source/wdprint.c
    Source/wdread.c
)

target_link_libraries(eeslism m)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
