cmake_minimum_required(VERSION 3.0.0)
project(OpenEESLISM VERSION 0.1.0)

include_directories(includes)

add_executable(eeslism 
    Source/func/CAT.c
    Source/func/CINC.c
    Source/func/COORDNT.c
    Source/func/DAINYUU.c
    Source/func/DATAIN.c
    Source/func/EOP.c
    Source/func/ERRPRINT.c
    Source/func/GDATA.c
    Source/func/GRPOINT.c
    Source/func/HOUSEN.c
    Source/func/INOROUT.c
    Source/func/KAUNT.c
    Source/func/KOUTEN.c
    Source/func/LPOP_placement.c
    Source/func/MAT_INIT.c
    Source/func/MONTE_CARLO.c
    Source/func/NENNKANN.c
    Source/func/OPIhor.c
    Source/func/PRA.c
    Source/func/RAND.c
    Source/func/SHADOW.c
    Source/func/STRCUT.c
    Source/func/URA.c
    Source/func/YOGEN.c
    Source/func/ZAHYOU.c
    Source/func/ZPRINT.c
    Source/bdhpri.c
    Source/bl/blhcflib.c
    Source/bl/blhelm.c
    Source/bl/blhelmlib.c
    Source/bl/blinit.c
    Source/bl/blpanel.c
    Source/bl/blpcm.c
    Source/bl/blpvsystem.c
    Source/bl/blrmaceqcf.c
    Source/bl/blrmdata.c
    Source/bl/blrmprint.c
    Source/bl/blrmqprt.c
    Source/bl/blrmresid.c
    Source/bl/blrmschd.c
    Source/bl/blrmvent.c
    Source/bl/blroom.c
    Source/bl/blroomcf.c
    Source/bl/blroomday.c
    Source/bl/blroomene.c
    Source/bl/blroomvar.c
    Source/bl/blroomvptr.c
    Source/bl/blrzone.c
    Source/bl/blsnbklib.c
    Source/bl/blsolarwall.c
    Source/bl/blsrprint.c
    Source/bl/bltcomfrt.c
    Source/bl/blwall.c
    Source/bl/dbgpri1.c
    Source/bl/dbgpri2.c
    Source/bl/dbgprip1.c
    Source/e79.c
    Source/ee/eebslib.c
    Source/ee/eecmpdat_s.c
    Source/ee/eecmpday_s.c
    Source/ee/eecmpprt_s.c
    Source/ee/eecpprint.c
    Source/ee/eedayslib.c
    Source/ee/eefiles.c
    Source/ee/eegndata.c
    Source/ee/eeinput_s.c
    Source/ee/eenvptr.c
    Source/ee/eepathdat.c
    Source/ee/eepathlib_s.c
    Source/ee/eepflow.c
    Source/ee/eeprint_s.c
    Source/ee/eepthene.c
    Source/ee/eepthprt.c
    Source/ee/eerthlib.c
    Source/ee/eespre.c
    Source/ee/eesyselmalc_s.c
    Source/ee/eesyseqv.c
    Source/ee/eesysupv_s.c
    Source/ee/eesysvar.c
    Source/ee/eettlprt.c
    Source/ee/eevcdat.c
    Source/ee/epsinput.c
    Source/esy/eschdata.c
    Source/esy/eschdlr_s.c
    Source/esy/eschval.c
    Source/esy/escntldat.c
    Source/esy/escntllb_s.c
    Source/esy/escntlsch_s.c
    Source/esy/escntrlfactor.c
    Source/esy/esidcode_s.c
    Source/ee/evcwdfl.c
    Source/mc/mcaclib.c
    Source/mc/mcboiler.c
    Source/mc/mccnvrg.c
    Source/mc/mcdesiccant.c
    Source/mc/mceqcadat.c
    Source/mc/mceqpcat.c
    Source/mc/mcevcooling.c
    Source/mc/mchccoil.c
    Source/mc/mchcload.c
    Source/mc/mchexchgr.c
    Source/mc/mcmecsys.c
    Source/mc/mcomvav.c
    Source/mc/mcpipe.c
    Source/mc/mcpump.c
    Source/mc/mcpv.c
    Source/mc/mcqmeas.c
    Source/mc/mcrefas.c
    Source/mc/mcreflib.c
    Source/mc/mcsolrcol.c
    Source/mc/mcstank.c
    Source/mc/mcstanklb.c
    Source/mc/mcstheat.c
    Source/mc/mcthex.c
    Source/mc/mcvalv.c
    Source/mc/mcvav.c
    Source/mc/mcxprmcs.c
    Source/memoryfree.c
    Source/lib/spline.c
    Source/lib/u_ees3lb.c
    Source/lib/u_inv.c
    Source/lib/u_minmax.c
    Source/lib/u_mlib.c
    Source/lib/u_psy.c
    Source/lib/u_sun.c
    Source/lib/valinit.c
    Source/waterandair.c
    Source/lib/wdprint.c
    Source/lib/wdread.c
)

target_link_libraries(eeslism m)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
